remove delivery baner

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -34,7 +34,7 @@
         </div>
     	<a href="/reservations/new" class="button">Забронировать столик</a>
 
-        <div class="delivery"><%= image_tag("911.jpg", class: "tobig", alt: "") %></div>
+        <!-- <div class="delivery"><%= image_tag("911.jpg", class: "tobig", alt: "") %></div> -->
         
         <div class="photos">
           <div class="photo-iteam"><%= image_tag("b02.jpg", class: "tobig", alt: "") %></div>
